# beatmatcher

./: .gitignore  .prettierignore  LICENSE  README.md  electron.vite.config.ts  eslint.config.js  package.json  tsconfig.node.json  tsconfig.web.json  vite.tauri.config.ts  vite.web.config.ts
.github/: RELEASING.md
.github/workflows/: auto-release.yml  build-and-release.yml  ci.yml  deploy.yml  release.yml
scripts/: release.ts  svg-to-png.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs
src/main/: index.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.vue  keybindings.ts  main.ts
src/renderer/src/assets/: main.css
src/renderer/src/audio/: AudioEngine.ts  LoopEngine.ts  PulseEngine.ts  bpmDetect.ts
src/renderer/src/audio/__tests__/: bpmDetect.test.ts
src/renderer/src/components/: BpmModal.vue  CollectionPanel.vue  ConfirmModal.vue  DeckPanel.vue  EditView.vue  LissajousScope.vue  MixerPanel.vue  Modal.vue  OverviewWaveform.vue  PhaseRing.vue  TopStrip.vue  WaveformDisplay.vue  lissajousScope.ts
src/renderer/src/components/__tests__/: lissajousScope.test.ts
src/renderer/src/composables/: useAudioFileDrop.ts  useKeyboard.ts  usePhase.ts
src/renderer/src/stores/: collection.ts  decks.ts  mixer.ts  savedTracks.ts  trackRegions.ts
src/renderer/src/utils/: waveformImage.ts
src/renderer/src/utils/__tests__/: waveformImage.test.ts
