[package]
name = "beatmatcher"
version = "2.1.0"
description = "Beat matching trainer app"
authors = ["berrutti"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "vorbis", "wav", "ogg"] }
rfd = "0.15"
tokio = { version = "1", features = ["rt"] }

# Optimize all dependencies (symphonia, cpal, etc.) even in dev builds.
# Our own code stays unoptimized for fast recompiles and usable stack traces.
[profile.dev.package."*"]
opt-level = 3
